# Coinhive

./: LICENSE  README.md  coinhive.js  web.config
wasm/: .gitignore  Cargo.toml  README.md  build_serve.sh  test.html
wasm/src/: lib.rs
